fix: entities table - tags wrapping, make icon smaller, change checkbox label

--- a/nerdlets/tag-improver-nerdlet/components/tag-listing.scss
+++ b/nerdlets/tag-improver-nerdlet/components/tag-listing.scss
@@ -25,7 +25,13 @@ $low-band-color: rgb(191, 0, 22);
 
 .tags__list {
   display: flex;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
+}
+
+.tag_nowrap_table_cell {
+  div {
+    text-overflow: clip;
+  }
 }
 
 .tags__tag {
